crates/ferrobridge-hl7v2/tests/it/snapshots/it__map__mdm_t02_bundle.snap
---
source: crates/ferrobridge-hl7v2/tests/it/map.rs
expression: pretty(mapped.bundle())
---
{
  "entry": [
    {
      "fullUrl": "urn:uuid:845daa9a-2cf3-893f-8c78-882e4f0b3d80",
      "resource": {
        "destination": [
          {
            "endpoint": "EHR",
            "receiver": {
              "reference": "urn:uuid:c9342b14-48d6-805c-b44e-42a42d4290e4"
            },
            "target": {
              "reference": "urn:uuid:ebf4230a-14c7-8241-9ebe-ee0c0444ce43"
            }
          }
        ],
        "eventCoding": {
          "code": "T02",
          "system": "http://terminology.hl7.org/CodeSystem/v2-0003"
        },
        "meta": {
          "tag": [
            {
              "system": "http://terminology.hl7.org/CodeSystem/v2-0103"
            }
          ]
        },
        "resourceType": "MessageHeader",
        "sender": {
          "reference": "urn:uuid:226141d9-77e9-8bbd-bbbe-ad581104ef9b"
        },
        "source": {
          "endpoint": "DOCS"
        }
      }
    },
    {
      "fullUrl": "urn:uuid:226141d9-77e9-8bbd-bbbe-ad581104ef9b",
      "resource": {
        "identifier": [
          {
            "value": "NORTHHOSP"
          }
        ],
        "resourceType": "Organization"
      }
    },
    {
      "fullUrl": "urn:uuid:ebf4230a-14c7-8241-9ebe-ee0c0444ce43",
      "resource": {
        "identifier": [
          {
            "value": "EHR"
          }
        ],
        "resourceType": "Device"
      }
    },
    {
      "fullUrl": "urn:uuid:c9342b14-48d6-805c-b44e-42a42d4290e4",
      "resource": {
        "identifier": [
          {
            "value": "SOUTHCLINIC"
          }
        ],
        "resourceType": "Organization"
      }
    },
    {
      "fullUrl": "urn:uuid:98e69842-9c10-8f97-830e-eb3a4330d1c4",
      "resource": {
        "birthDate": "1975-11-11",
        "gender": "unknown",
        "identifier": [
          {
            "type": {
              "coding": [
                {
                  "code": "MR"
                }
              ]
            },
            "value": "PAT-0003"
          }
        ],
        "name": [
          {
            "family": "Doe",
            "given": [
              "Sam"
            ],
            "use": "official"
          }
        ],
        "resourceType": "Patient"
      }
    },
    {
      "fullUrl": "urn:uuid:a18685f3-8d30-85fb-a6b4-cf915623dbd8",
      "resource": {
        "class": {
          "code": "AMB",
          "display": "ambulatory",
          "system": "http://terminology.hl7.org/CodeSystem/v3-ActCode"
        },
        "resourceType": "Encounter",
        "status": "in-progress"
      }
    }
  ],
  "identifier": {
    "value": "MSG00003"
  },
  "resourceType": "Bundle",
  "timestamp": "2026-09-25T10:00:00+02:00",
  "type": "message"
}
