crates/ferrobridge-hl7v2/tests/it/snapshots/it__map__oru_r01_counts.snap
---
source: crates/ferrobridge-hl7v2/tests/it/map.rs
expression: mapped.counts()
---
{
    "earlier-version": 1,
    "missing-required": 1,
    "narrative-condition": 19,
    "no-datatype-map": 3,
    "no-segment-map": 1,
    "unknown-element": 6,
    "unknown-segment": 1,
    "unmapped-component": 2,
    "unmapped-field": 10,
    "unresolved-table": 1,
    "unsupported-assignment": 1,
    "unsupported-condition": 4,
    "unsupported-target": 1,
}
